feat!: update extension logic to be more site agnostic, allowing for multiples websites implementations

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -44,7 +44,6 @@ img {
     justify-content: center;
 }
 
-#button-container > :first-child {
+#button-container > button:not(:first-child) {
     margin-top: 8px;
-    margin-bottom: 8px;
 }
